--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,14 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# ----------------------------------------
+# NPM
+# ----------------------------------------
 
-# dependencies
-/node_modules
+node_modules/
+npm-debug.log
 
-# testing
-/coverage
 
-# production
-/build
+# ----------------------------------------
+# ENV
+# ----------------------------------------
+.env
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
