--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
   "name": "korsite",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+  "version": "1.0.0",
+  "description": "Kor's site",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GeneTinderholm/korsite.git"
+  },
+  "author": "Gene Tinderholm",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GeneTinderholm/korsite/issues"
+  },
+  "homepage": "https://github.com/GeneTinderholm/korsite#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-flash-messages": "^0.1.1",
+    "express-handlebars": "^3.0.0",
+    "express-method-override-get-post-support": "^1.0.1",
+    "load-helpers": "^1.0.1",
+    "lodash": "^4.17.5",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
+    "morgan-toolkit": "^1.2.2"
   }
 }
